# NYC-Taxi-Demand-Prediction

./: README.md  main_dashboard.py  pyproject.toml  requirements.txt
.github/workflows/: feature_pipeline.yml  inference_pipeline.yml
notebooks/: 03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
scripts/: training_pipeline.py
src/: config.py  data.py  frontend.py  frontend_monitoring.py  inference.py
